Fixed Bug: The z-index must be -1 for background

--- a/sass_template_one/css/main.scss
+++ b/sass_template_one/css/main.scss
@@ -18,6 +18,6 @@ body
         width: 100%;
         height: 100%;
         position: absolute;
-        z-index: 1;
+        z-index: -1;
     }
 }
